Update privacy policy

--- a/src/songDialog.html
+++ b/src/songDialog.html
@@ -25,6 +25,11 @@
       .wait * {
         cursor: wait !important;
       }
+      #bottom {
+        flex-direction: row;
+        justify-content: space-between;
+        display: flex;
+      }
     </style>
     <div class="container">
       <div id="top">
@@ -44,6 +49,9 @@
         >
           Submit
         </button>
+        <a href="https://col.dejongbos.nl/privacy" target="_blank">
+          Privacy Policy
+        </a>
       </div>
     </div>
 
