--- a/src/songDialog.html
+++ b/src/songDialog.html
@@ -29,6 +29,8 @@
         flex-direction: row;
         justify-content: space-between;
         display: flex;
+        margin-top: 5px;
+        align-items: center;
       }
     </style>
     <div class="container">
